--- a/BeeHive/Base.lproj/Main_iPhone.storyboard
+++ b/BeeHive/Base.lproj/Main_iPhone.storyboard
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Bee Hive View Controller - BeeHive-->
+        <!--Bee Hive View Controller-->
         <scene sceneID="Ymb-bL-pdi">
             <objects>
                 <viewController id="2Db-Cn-aQY" customClass="BHBeeHiveViewController" sceneMemberID="viewController">
@@ -16,13 +16,28 @@
                     <view key="view" contentMode="scaleToFill" id="mGR-eX-N8t">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u3o-gD-Yba">
+                                <rect key="frame" x="143" y="211" width="35" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Scan">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="scanButtonClicked:" destination="2Db-Cn-aQY" eventType="touchUpInside" id="Y0R-x4-1n9"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="BeeHive" image="BeeHive" id="EcT-C7-DGP"/>
+                    <navigationItem key="navigationItem" id="VeB-FU-VUZ"/>
+                    <connections>
+                        <segue destination="066-oP-BLn" kind="push" identifier="scanSegue" id="fWX-FE-tfx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TyJ-Dg-KJu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="650" y="-806"/>
+            <point key="canvasLocation" x="1176" y="-806"/>
         </scene>
         <!--Navigation Controller - Map-->
         <scene sceneID="QZr-VS-FXY">
@@ -112,15 +127,15 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
+                        <segue destination="fQ4-hV-cJ1" kind="relationship" relationship="viewControllers" id="kZc-zE-egb"/>
                         <segue destination="bpH-LK-DNh" kind="relationship" relationship="viewControllers" id="EET-mw-5lp"/>
                         <segue destination="yP5-GF-5Br" kind="relationship" relationship="viewControllers" id="H0J-BC-vXk"/>
-                        <segue destination="2Db-Cn-aQY" kind="relationship" relationship="viewControllers" id="kZc-zE-egb"/>
                         <segue destination="Ryb-zc-khT" kind="relationship" relationship="viewControllers" id="sTa-I1-yuZ"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FNP-y4-bzi" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="26" y="186"/>
+            <point key="canvasLocation" x="20" y="208"/>
         </scene>
         <!--Navigation Controller - List-->
         <scene sceneID="NAC-wz-J5J">
@@ -649,7 +664,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xaJ-GN-W8u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2857" y="267"/>
+            <point key="canvasLocation" x="2955" y="274"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BIf-rY-cYi">
@@ -664,7 +679,26 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wVO-Zq-RQZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2374" y="267"/>
+            <point key="canvasLocation" x="2411" y="267"/>
+        </scene>
+        <!--Navigation Controller - BeeHive-->
+        <scene sceneID="15M-v6-0Ok">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fQ4-hV-cJ1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="BeeHive" image="BeeHive" id="EcT-C7-DGP"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SfC-Oh-cNZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2Db-Cn-aQY" kind="relationship" relationship="rootViewController" id="krC-DS-eSr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q6a-Sd-5P2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="650" y="-806"/>
         </scene>
     </scenes>
     <resources>
@@ -680,6 +714,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="fWX-FE-tfx"/>
         <segue reference="DtF-5X-fBy"/>
     </inferredMetricsTieBreakers>
 </document>
